Fix javaascript for language menu

--- a/_data/sections.yml
+++ b/_data/sections.yml
@@ -5,3 +5,4 @@ api:
 endpoints:
   customers: ['base', 'object', 'identify', 'alias', 'retrieve', 'unsubscribe', 'resubscribe', 'delete', 'list']
   tags: ['base', 'object', 'add', 'remove', 'list']
+  events: ['base', 'object', 'track']
